[build-system]

build-backend = "poetry.masonry.api"

requires = ["poetry>=0.12"]


[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]

description = ""
name = "definitesurprisedirc"

version = "0.1.0"
[tool.poetry.dependencies]

Pyrogram = "1.2.11"

Telethon = "1.24.0"

python = "^3.8"
[tool.poetry.dev-dependencies]